# microtick

./: .gitignore  CMakeLists.txt  README.md  tick.mlir
include/Microtick/: CMakeLists.txt  MicrotickDialect.h  MicrotickDialect.td  MicrotickOps.h  MicrotickOps.td  MicrotickPasses.h
lib/: CMakeLists.txt
lib/Microtick/: CMakeLists.txt  MicrotickDialect.cpp  MicrotickLowerHandlers.cpp  MicrotickLowerRuntime.cpp  MicrotickOps.cpp  MicrotickPasses.cpp
microtick-opt/: CMakeLists.txt  microtick-opt.cpp
runtime/include/: microtick_runtime.h
runtime/src/: CMakeLists.txt  engine.cpp
testing-ir/: cancel-bad.mlir  cancel-good.mlir  guardrail-send-cancel.mlir  on_book.mlir  strategy_bad.mlir  strategy_dual_risk_ok.mlir  strategy_e2e_demo.mlir  strategy_hoisting.mlir  strategy_messy.mlir  strategy_missing_inventory.mlir  strategy_ok.mlir  strategy_trade.bad.mlir  strategy_trade_ok.mlir  strategy_with_timer_bad.mlir  strategy_with_timer_ok.mlir  tick.mlir
utils/: compile_strategy.sh
